--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,4 +9,4 @@ services:
     ports:
       - "8000:8000"
     restart: unless-stopped
-    command: ["--model", "large-v3-turbo.en", "--language", "en", "--diarization"]
+    command: ["--model", "small.en", "--language", "en", "--diarization"]
